# Steammy

./: CODEOWNERS  README.md  main.py  pyproject.toml
src/: __main__.py
src/bot/: bot_base.py  command_handler.py
src/steam_api/: basic_connection.py  steam_user.py  user_game.py
